k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosmos-db-service
  namespace: cosmos-app
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432 # Port for your pgAdmin connection
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmos-db
  namespace: cosmos-app
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate # Important: Stop old pod before starting new one to avoid disk lock
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data # This is where Postgres looks for data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc # This links to the "Reservation" above
